--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ pytest = "^7.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[flake8]
+max-line-length = 120
